--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://jborden.github.com
+production_url : https://jborden.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -98,7 +98,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-99225045-1'
     getclicky :
       site_id : 
     mixpanel :
